--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,19 @@
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
 
-  "browser_action": {
+  "page_action": {
     "default_icon": "icon.png",
     "default_popup": "testing.html"
   },
+
+  "content_scripts": [{
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }],
+
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://ajax.googleapis.com/",
+    "tabs"
   ]
 }
