--- a/manifest.json
+++ b/manifest.json
@@ -5,19 +5,20 @@
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
 
-  "page_action": {
+  "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "testing.html"
   },
 
-  "content_scripts": [{
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }],
+ "background": {
+  "scripts": ["background.js"]
+  },
 
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/",
-    "tabs"
+    "tabs",
+    "http://*/*",
+    "https://*/*"
   ]
 }
